tests/broken/for-bad-variable.stderr
error[E0609]: no field `numb` on type `&Data`
 --> tests/broken/for-bad-variable.rs:4:84
  |
4 | #[oxiplate = "{%- for number in numbers -%}{{ number }} + {{ number_to_add }} = {{ numb + number_to_add }}{% endfor %}"]
  |                                                                                    ^^^^ unknown field
  |
  = note: available fields are: `numbers`, `number_to_add`
